# sway-ipc-haskell-bindings

./: LICENSE  README.md  flake.nix  ghcid-wrapper
sway-ipc/: sway-ipc.cabal
sway-ipc/app/: Main.hs
sway-ipc/src/Network/Sway/: IPC.hs
